fix collapse style and flag

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -627,6 +627,9 @@ input.project-search
   .input-and-btn .btn
     margin: -6px 0 0 6px
     font-size: 1.7em
+    .fa
+      position: relative
+      top: -2px
 
   .issue-list
 
